...
              <Image
                source={require('./images/App_Logo.png')}
                style={styles.logoImage}
                resizeMode="contain"
              />
            </View>
            <Text style={styles.logoLabel}>SmartSpend</Text>
          </View>
        </View>

        <Text style={styles.title}>{isRegistering ? 'Register' : 'Login'}</Text>

        {isRegistering && (
...
