appId: host.exp.exponent
name: F03 - Message box test
---
- launchApp
- tapOn: "SmartSpend"

- assertVisible: "Home"

- scroll
- tapOn: "AI Chatbot"

- assertVisible: "Finance Assistant"

- tapOn:
    point: "44%,92%"
- inputText: "What should my monthly savings target be??"
- tapOn:
    point: "92%,92%"
- assertVisible: "Plan Highlights"
