appId: host.exp.exponent
name: V01 - Non-finance input HI / Hello
---
- launchApp
- tapOn: "SmartSpend"

- assertVisible: "Home"

- scroll
- tapOn: "AI Chatbot"

- assertVisible: "Finance Assistant"

- tapOn:
    point: "44%,92%"
- inputText: "hi"
- tapOn:
    point: "92%,92%"

# Acceptable replies
- assertVisible: { text: "Sorry", optional: true }
- assertVisible: { text: "unable", optional: true }
- assertVisible: { text: "Savings", optional: true }
- assertVisible: { text: "Finance Assistant", optional: true }

- tapOn:
    point: "44%,92%"
- inputText: "Hello"
- tapOn:
    point: "92%,92%"

# Acceptable replies
- assertVisible: { text: "Sorry", optional: true }
- assertVisible: { text: "unable", optional: true }
- assertVisible: { text: "Savings", optional: true }
- assertVisible: { text: "Finance Assistant", optional: true }
