appId: host.exp.exponent
name: V03 - Non-finance input tamil
---
- launchApp
- tapOn: "SmartSpend"

- assertVisible: "Home"

- scroll
- tapOn: "AI Chatbot"
- assertVisible: "Finance Assistant"

- tapOn:
    point: "44%,92%"
- inputText: "Can you speak tamil"
- tapOn:
    point: "92%,92%"

# Acceptable replies
- assertVisible: { text: "Sorry", optional: true }
- assertVisible: { text: "unable", optional: true }
- assertVisible: { text: "Savings", optional: true }
- assertVisible: { text: "Finance Assistant", optional: true }
