appId: host.exp.exponent
name: V05 - Empty Input No chat has to be send
---
- launchApp
- tapOn: "SmartSpend"

- assertVisible: "Home"

- scroll
- tapOn: "AI Chatbot"

- assertVisible: "Finance Assistant"

# Try sending blank text
- tapOn:
    point: "44%,92%"
- tapOn:
    point: "92%,92%"

# Verify no bot reply (
- assertVisible: { text: "Finance Assistant", optional: true }

